[gd_scene load_steps=5 format=3 uid="uid://1f18j27gkjo"]

[ext_resource type="Script" path="res://scenes/pause_menu/pause_menu.gd" id="1_a5nku"]
[ext_resource type="Theme" uid="uid://bub0krrjkgjvw" path="res://art/theme.tres" id="2_nmf7g"]

[sub_resource type="InputEventAction" id="InputEventAction_3qxh3"]
action = &"ui_cancel"

[sub_resource type="Shortcut" id="Shortcut_cp2vt"]
events = [SubResource("InputEventAction_3qxh3")]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_a5nku")

[node name="BackgroundOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.254902)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 28

[node name="ResumeBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nmf7g")
theme_override_font_sizes/font_size = 35
shortcut = SubResource("Shortcut_cp2vt")
text = "Resume"

[node name="QuitBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_nmf7g")
theme_override_font_sizes/font_size = 35
text = "Quit To Main Menu"

[connection signal="pressed" from="VBoxContainer/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitBtn" to="." method="_on_quit_btn_pressed"]
